--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
   <meta charset="utf-8">
 
   <title>NiCAR 2016</title>
-  <meta name="description" content="The HTML5 Herald">
+  <meta name="description" content="NICAR facts">
   <meta name="author" content="SitePoint">
 
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <section id="header" class="container-fluid">
     <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-12 col-xs-12">
       <h1 id="main-title"> NICAR 2016  </h1>
       <h3 class="center"> Nerd Data Journalists Summit</h3>
       <h4 class="center">| 10.03.2016 - 13.03.2016 |</h4>
     </div>
+    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+      <div class="social-icons">
+      <div class="twitter"> <a href=""target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a></div>
+      <div class="facebook">  <a href=""target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a></div>
+     </div>
     </div>
   </section>
 
@@ -93,7 +99,6 @@
   <script src="js/d3.min.js"></script>
   <script src="http://d3js.org/queue.v1.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
-  <script src="js/facts.js"></script>
   <script src="js/globe.js"></script>
   <script src="js/nicarminutes.js"></script>
 
