--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>NiCAR 2016</title>
   <meta name="description" content="NICAR facts">
   <meta name="author" content="SitePoint">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
