--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
   <meta charset="utf-8">
 
   <title>NiCAR 2016</title>
-  <meta name="description" content="NICAR facts">
+  <meta name="description" content="Nerd Data Journalists Summit">
   <meta name="author" content="SitePoint">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+
+  <!-- OpenGraph Meta Tags -->
+  <meta property="og:site_name" content="yarynam.github.io" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="NICAR 2016" />
+  <meta property="og:image" content="http://texty.org.ua/action/file/download?file_guid=65108" />
+  <meta property="og:description" content="Nerd Data Journalists Summit" />
+  <meta property="og:url" content="http://yarynam.github.io/" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:site" content="@IRE_NICAR" />
+  <meta property="twitter:account_id" content="49572937" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="http://yarynam.github.io/" />
+  <meta name="twitter:title" content="NICAR 2016" />
+  <meta name="twitter:description" content="NICAR 2016 facts" />
+  <meta name="twitter:image:src" content="http://texty.org.ua/action/file/download?file_guid=65108" />
+  <meta name="twitter:image:width" content="1505" />
+  <meta name="twitter:image:height" content="819" />
 
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
@@ -23,12 +43,12 @@
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-mg-offset-1 col-sm-10 col-sm-offset-1 col-xs-8 col-xs-offset-2">
       <h1 id="main-title"> NICAR 2016  </h1>
       <h3 class="center"> Nerd Data Journalists Summit</h3>
-      <h4 class="center">| 10.03.2016 - 13.03.2016 |</h4>
+      <h4 class="center">|  3/10/2016 - 3/13/2016 |</h4>
     </div>
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
       <div class="social-icons">
-      <div class="twitter"> <a href=""target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a></div>
-      <div class="facebook">  <a href=""target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a></div>
+      <div class="twitter"> <a href="https://twitter.com/home?status=NICAR 2016 facts http://yarynam.github.io/NICAR/"target="_blank"><i class="fa fa-twitter fa-fw fa-2x"></i></a></div>
+      <div class="facebook">  <a href="https://www.facebook.com/sharer/sharer.php?u=http://yarynam.github.io/NICAR/"target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a></div>
      </div>
     </div>
   </section>
@@ -42,7 +62,7 @@
       </div>
       <div class="fact col-lg-3 col-md-3 col-sm-6 col-xs-12">
         <img class="img-responsive" src="img/countries.svg"></img>
-        <h2>22</h2>
+        <h2>23</h2>
         <div class="subtitle"> Countries represented</div>
       </div>
       <div class="fact col-lg-3 col-md-3 col-sm-6 col-xs-12">
