--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
        </div>
        <a class="btn" href="http://www.ire.org/conferences/nicar2016/"> Visit NICAR</a>
     </div>
-	</div>
+  </div>
+
+    <span id="credits"> By <a href="http://yarynam.github.io/portfolio/"> Iaryna Mykhyalyshyn </a> | <a href="https://twitter.com/iarynam"> @iarynam </a> <span>
+
 </section>
 
 
