--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>NiCAR 2016</title>
   <meta name="description" content="Nerd Data Journalists Summit">
-  <meta name="author" content="SitePoint">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
