--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8">
 
-
-  <meta name="description" content="Nerd Data Journalists Summit">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="NICAR 2016">
+  <meta name="author" content="Iaryna Mykhyalyshyn">
 
+  <meta name="keywords" content="NICAR data journalism">
 
   <!-- OpenGraph Meta Tags -->
   <meta property="og:site_name" content="yarynam.github.io" />
@@ -36,6 +38,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
+
+
+
+
+
 
 <body>
   <section id="header" class="container-fluid">
