--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
 
   <meta charset="utf-8">
+  <meta name="title" content="NICAR 2016">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="NICAR 2016">
+  <meta name="description" content="Nerd Data Journalists Summit">
   <meta name="author" content="Iaryna Mykhyalyshyn">
 
   <meta name="keywords" content="NICAR data journalism">
@@ -16,7 +17,7 @@
   <meta property="og:site_name" content="yarynam.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="NICAR 2016" />
-  <meta property="og:image" content="http://texty.org.ua/action/file/download?file_guid=65108" />
+  <meta property="og:image" content="https://github.com/yarynam/NICAR/blob/gh-pages/img/sm.png?raw=true" />
   <meta property="og:description" content="Nerd Data Journalists Summit" />
   <meta property="og:url" content="http://yarynam.github.io/" />
 
@@ -27,7 +28,7 @@
   <meta name="twitter:url" content="http://yarynam.github.io/" />
   <meta name="twitter:title" content="NICAR 2016" />
   <meta name="twitter:description" content="NICAR 2016 facts" />
-  <meta name="twitter:image:src" content="http://texty.org.ua/action/file/download?file_guid=65108" />
+  <meta name="twitter:image:src" content="https://github.com/yarynam/NICAR/blob/gh-pages/img/sm.png?raw=true" />
   <meta name="twitter:image:width" content="1505" />
   <meta name="twitter:image:height" content="819" />
 
@@ -94,13 +95,13 @@
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <img class="img-responsive" src="img/r.svg"></img>
       <h2>975</h2>
-      <div class="subtitle"> minutes of Statistics </div>
+      <div class="subtitle"> minutes of statistics </div>
       <div id="statistics" class="minutes"> </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <img class="img-responsive" src="img/map.svg"></img>
       <h2>1335</h2>
-      <div class="subtitle"> minutes of Maps </div>
+      <div class="subtitle"> minutes of maps </div>
       <div id="maps" class="minutes"> </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
